[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/Ice expansion/Tiles/spikesBottom.png" type="Texture" id=1]
[ext_resource path="res://assets/images/Base pack/BubblesAnimated.tres" type="Texture" id=2]
[ext_resource path="res://levelScenes/SpikeDrag.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/BubblingSound.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.5, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 6.88889 )

[node name="Spike Drag" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 3 )

[node name="SpikeDragSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpikeKillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeKillArea"]
position = Vector2( 0.5, 18 )
shape = SubResource( 1 )

[node name="BubbleSprite" type="Sprite" parent="."]
position = Vector2( 0.143018, -47 )
scale = Vector2( 0.190683, 0.11125 )
z_index = -1
texture = ExtResource( 2 )
offset = Vector2( -0.75, 0 )

[node name="BubblesWaitTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 9.0
one_shot = true

[node name="BubbleAttackTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.67
one_shot = true

[node name="SpikeDragArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeDragArea"]
position = Vector2( 0, -62 )
scale = Vector2( 5, 9 )
shape = SubResource( 2 )

[node name="BubblingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 15.0
max_distance = 800.0
attenuation = 1.62451

[connection signal="body_entered" from="SpikeKillArea" to="." method="_on_SpikeKillArea_body_entered"]
[connection signal="timeout" from="BubblesWaitTimer" to="." method="_on_BubblesWaitTimer_timeout"]
[connection signal="timeout" from="BubbleAttackTimer" to="." method="_on_BubbleAttackTimer_timeout"]
[connection signal="body_entered" from="SpikeDragArea" to="." method="_on_SpikeDragArea_body_entered"]
[connection signal="body_exited" from="SpikeDragArea" to="." method="_on_SpikeDragArea_body_exited"]
